--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "yiisoft/yii2": "*",
-        "adldap2/adldap2": "6.o.*"
+        "adldap2/adldap2": "6.0.*"
     },
     "autoload": {
         "psr-4": {
